# FeatLens

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  test.yml
configs/: example.yaml
demo/: README.md  app.py  requirements.txt
docs/: api.md  contributing.md  index.md  installation.md  methods.md  models.md  usage.md
docs/stylesheets/: extra.css
examples/: make_demo_gif.py  quickstart.py  vjepa_video.py
examples/images/: CREDITS.md
examples/videos/: CREDITS.md
featlens/: __init__.py  attention.py  batch.py  cache.py  cli.py  correspond.py  extractor.py  grid.py  methods.py  pca.py  preprocess.py  registry.py  tokens.py  video.py
featlens/adapters/: base.py  custom_adapter.py  external_adapter.py  hf_adapter.py  timm_adapter.py  torchhub_adapter.py
layerlens/: __init__.py  cli.py  extractor.py  grid.py  preprocess.py
layerlens/adapters/: __init__.py  custom_adapter.py  external_adapter.py  hf_adapter.py  timm_adapter.py  torchhub_adapter.py
tests/: test_attention.py  test_batch.py  test_cache.py  test_correspond_mutual.py  test_demo.py  test_methods.py  test_montage.py  test_return_data.py  test_smoke.py  test_video.py
